# Dream.os

./: .auditignore  .coverage  .coveragerc  .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config-optimized.yaml  .pre-commit-config-windows.yaml  .pre-commit-config.yaml  ACTIVE_DEBATE_COORDINATION.md  AGENT-1_DISCORD_COORDINATION.md  AGENT-1_PHASE_2_STATUS_UPDATE.md  AGENT-4_DOMAIN_QA_CONSOLIDATION_RECOMMENDATIONS.md  AGENT-4_DOMAIN_QA_STRUCTURAL_ANALYSIS_REPORT.md  AGENT-4_FINAL_CONSOLIDATION_REPORT.md  AGENT-4_V2_COMPLIANCE_ANALYSIS_REPORT.md  AGENT-5_EMERGENCY_RESPONSE_SUMMARY.md  AGENT-5_V2_CAMPAIGN_COMPLETE.md  AGENT-6_PHASE2_WEEK1_REPORT.md  AGENT2_ARCHITECTURE_VS_AGENT6_COMPARISON.md  AGENT6_TOOL_AUDIT_RESULTS.json  AGENT7_SESSION_SUMMARY_2025-12-11.md  AGENT8_SSOT_COORDINATION_COMPLETE_SUMMARY_2025-12-11.md  AGENTS.md  AGENT_1_AUTONOMOUS_CLEANUP_PROGRESS_REPORT.md  AGENT_3_DOCUMENTATION_CLEANUP_SUMMARY.md  AGENT_3_DUAL_MISSION_COMPLETION_REPORT.md  AGENT_3_DUPLICATE_FILES_ANALYSIS_REPORT.md  AGENT_3_FINAL_GIT_SOLUTION_REPORT.md  AGENT_3_GIT_BASH_FINAL_SOLUTION.md  AGENT_3_GIT_RESTRICTIONS_ANALYSIS_REPORT.md  AGENT_3_GIT_RESTRICTIONS_RESOLUTION_REPORT.md  AGENT_3_INFRASTRUCTURE_AUDIT_REPORT.md  AGENT_3_PHASE_2_ANALYSIS.md  AGENT_3_REDUNDANCY_CLEANUP_PLAN.md  AGENT_3_UNICODE_ENCODING_FIX_REPORT.md  AGENT_3_UNNECESSARY_DOCS_ANALYSIS.md  AGENT_3_WSL_SOLUTION_SUMMARY.md  AGENT_5_V2_COMPLIANCE_REFACTORING_REPORT.md  AGENT_7_SESSION_SUMMARY.md  (+821 more)
.analysis/: consolidation_opportunities.md
.deploy_credentials/: README.md  blogging_api.example.json  sites.example.json  sites.json
.deploy_credentials.example/: README.md
agent_cellphone_v2/: __init__.py  config.py
agent_messages/: a2a_reply_agent5_50a17886.md  a2a_reply_agent6_ace857a1.md  captain_assignment_agent3_e6b27842.md  captain_assignment_agent4_ad48aebc.md  reassignment_agent5_bfa6553b.md  reassignment_agent6_b3219377.md
agent_surveys/: Agent-1_Services_Integration_Survey_Results.md  Agent-1_Survey_Assignment.md  Agent-4_Survey_Assignment.md  Agent-6_Survey_Assignment.md  Agent-7_Survey_Assignment.md  Agent-8_Survey_Assignment.md
agent_workspaces/: README.md  agent_registry.json
alerts/: alert_20251214_172305.json  alert_20251214_172335.json  alert_20260106_175953.json  alert_20260107_044838.json  alert_20260107_045228.json  alert_20260107_053539.json  alert_20260107_053722.json  alert_20260107_054119.json  alert_20260107_060944.json  alert_20260107_061116.json  alert_20260107_065751.json  alert_20260107_065820.json  alert_20260107_065921.json  alert_20260107_072602.json  alert_20260107_224419.json  alert_20260107_234955.json  alert_20260108_105053.json  alert_history.jsonl
analysis/: agent_analysis.json  architecture_overview.json  complexity_analysis.json  dependency_analysis.json  file_type_analysis.json  module_analysis.json
analysis_chunks/: chunk_001_core.json  chunk_002_services.json  chunk_003_web.json  chunk_004_utils.json  chunk_005_infrastructure.json  chunk_006_gaming.json  chunk_007_trading_robot.json  chunk_008_domain.json  chunk_009_application.json  chunk_010_architecture.json  chunk_011_docs.json  chunk_011_tests.json  chunk_012_docs.json  chunk_012_scripts.json  chunk_013_scripts.json  chunk_013_tools.json  chunk_014_tools.json  consolidation_summary.md  master_index.json
apps/: __init__.py
archive/: README.md  consolidation_report_20260109.md  final_cleanup_report_20260109.md
artifacts/: 2025-12-11_agent-1_core_templates_validation.md  2025-12-11_agent-1_messaging_infrastructure_validation.md  2025-12-11_agent-1_messaging_service_validation.md  2025-12-11_agent-5_broadcast_template_validation.md  2025-12-11_agent-5_complete_session_artifacts.md  2025-12-11_agent-5_comprehensive_template_validation.md  2025-12-11_agent-5_contract_system_analysis.md  2025-12-11_agent-5_contract_system_health_check.md  2025-12-11_agent-5_contract_validation_verification.md  2025-12-11_agent-5_discord_bot_bi_analysis.md  2025-12-11_agent-5_extractor_parser_validation.md  2025-12-11_agent-5_final_systems_validation.md  2025-12-11_agent-5_final_validation_summary.md  2025-12-11_agent-5_hidden_metrics_analysis.md  2025-12-11_agent-5_messaging_template_coverage_analysis.md  2025-12-11_agent-5_multi_category_template_validation.md  2025-12-11_agent-5_performance_monitoring_validation.md  2025-12-11_agent-5_s2a_template_validation.md  2025-12-11_agent-5_session_summary.md  2025-12-11_agent-5_stall_detection_consolidated_analysis.md  2025-12-11_agent-5_stall_detection_enhancement_analysis.md  2025-12-11_agent-5_stall_detection_quick_reference.md  2025-12-11_agent-5_template_defaults_validation.md  2025-12-11_agent-5_validation_result.md  2025-12-11_agent-5_validation_results.md  2025-12-11_agent-5_validation_run.md  2025-12-11_agent-5_vector_models_validation.md  2025-12-11_agent-6_coordination_system_validation.md  2025-12-11_agent-8_activity_detection_complete_summary.md  2025-12-11_agent-8_activity_detection_enhancement_proposal.md  2025-12-11_agent-8_complete_activity_sources_list.md  2025-12-11_agent-8_enhanced_activity_sources_validation.md  2025-12-11_agent-8_final_activity_detection_summary.md  2025-12-11_agent-8_phase2_activity_sources_implementation.md  2025-12-11_agent-8_phase2_validation_report.md  2025-12-11_agent-8_stall_detection_validation.md  2025-12-12_agent-1_blog_automation_complete.md  2025-12-12_agent-1_ci_workflow_status_update.md  2025-12-12_agent-1_ci_workflow_validation.md  2025-12-12_agent-1_ci_workflow_verification.md  (+87 more)
audit_outputs/: CAPTAIN_AUDIT_REPORT.md  archive_age_manifest.csv  archive_age_report.csv  dead_files_confirmed.json  duplicate_clusters.json  duplication_jscpd.json  manifest.json  orphan_imports.json
audit_results/: ci_cd_review_2026-03-13.md  duplication_cleanup_progress_report.md  mcp_integration_progress_report.md  repository_duplication_audit_2026-01-16.md
autonomous_config_reports/: autonomous_consolidation_report.md  autonomous_master_report.md  autonomous_migration_report.md  autonomous_remediation_report.md
batches/: batch_001.json  batch_002.json  (+24 more)
(+21027 files in other folders)
